@@ -188,8 +188,9 @@ varRange::varRange(uint width):dflt(rangemax[width]),num(0),width(width){
 	VERIFY(width&&width<5&&width!=3,width);
 }
 
-void varRange::UpdateRange(uint op,uint shift,const PseudoSprite&data,uint&offs){
+void varRange::UpdateRange(uint Var,uint op,uint shift,const PseudoSprite&data,uint&offs){
 	uint add,divmod,nAnd=data.ExtractVariable(offs,width);
+	if(Var!=0x73&&!nAnd)IssueMessage(WARNING1,AND_00,offs);
 	offs+=width;
 	range var(rangemax[width],0,(0xFFFFFFFF>>shift)&nAnd);
 	if(shift&0xC0){
